--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,7 +39,7 @@ jobs:
         type: string
       molecule-scenario-name:
         type: string
-    working_directory: ~/swap
+    working_directory: ~/swapfile
     steps:
       - checkout
       - aws-cli/setup
@@ -86,7 +86,7 @@ workflows:
           aws-ami-name: 'centos-stream8-1*'
           aws-ami-owner-id: '808683561341'
           aws-instance-type: 't2.medium'
-          aws-resource-name: 'circleci_ansible-roles_swap_centos-stream8'
+          aws-resource-name: 'circleci_ansible-roles_swapfile_centos-stream8'
           aws-vpc-subnet-id: 'subnet-022a704b3061b8b39'
           circleci-timeout: '15m'
           molecule-scenario-name: 'default'
