--- a/molecule/default/converge.yml
+++ b/molecule/default/converge.yml
@@ -10,7 +10,7 @@
 
     - name: Execute
       ansible.builtin.include_role:
-        name: swap
+        name: swapfile
       vars:
         image: "{{ molecule_platforms.0.image }}"
         instance_type: "{{ molecule_platforms.0.instance_type }}"
