--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -82,11 +82,23 @@ workflows:
           requires:
             - yamllint
       - molecule-ec2:
-          ansible-user: centos
+          ansible-user: 'centos'
           aws-ami-name: 'centos-stream8-1*'
           aws-ami-owner-id: '808683561341'
           aws-instance-type: 't2.medium'
           aws-resource-name: 'circleci_ansible-roles_swapfile_centos-stream8'
+          aws-vpc-subnet-id: 'subnet-022a704b3061b8b39'
+          circleci-timeout: '15m'
+          molecule-scenario-name: 'default'
+          context: aws-oidc
+          requires:
+            - ansible-lint
+      - molecule-ec2:
+          ansible-user: 'ec2-user'
+          aws-ami-name: 'centos-stream9-1*'
+          aws-ami-owner-id: '808683561341'
+          aws-instance-type: 't2.medium'
+          aws-resource-name: 'circleci_ansible-roles_swapfile_centos-stream9'
           aws-vpc-subnet-id: 'subnet-022a704b3061b8b39'
           circleci-timeout: '15m'
           molecule-scenario-name: 'default'
